# vidbid-plutus-compiler

./: Readme.md  alwaystrue.cabal  cabal.project  hie.yaml  vidbid.cabal
app/: compile-plutus.hs  datum-json.hs
src/: Utility.hs
src/AlwaysTrue/: Onchain.hs
src/Vidbid/: Mint.hs
