Cabal-Version:      2.4
Name:               alwaystrue
Version:            0.1.0.0
Build-Type:         Simple

Author:              Alain Magazin
Maintainer:          alain@martify.io
Copyright:           © 2022 Alain Magazin
License:             Apache-2.0
License-files:       LICENSE

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  exposed-modules:     AlwaysTrue.Onchain
                     , Utility
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , base16-bytestring
                     , binary
                     , containers
                     , bytestring
                     , data-default
                     , dlist                     
                     , freer-extras
                     , lens
                     , nonempty-containers
                     , playground-common
                     , plutus-contract
                     , plutus-chain-index
                     , plutus-chain-index-core
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-ledger-api
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , prettyprinter
                     , tagged
                     , text
                     , serialise
                     , cardano-api
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable compile-plutus
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              compile-plutus.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , alwaystrue
                      , plutus-ledger-api
                      , bytestring
                      , cardano-ledger-alonzo
                      , plutus-core

